elements/pf-label-group/pf-label-group.css
:host {
  display: flex;
  flex-direction: row;
  position: relative;
  gap: 0.5rem;
  border: 0;
}

pf-button {
  --pf-c-button--FontSize: var(--pf-c-label__c-button--FontSize, var(--pf-global--FontSize--xs, 0.75rem));
  --pf-c-button--PaddingTop: var(--pf-c-label__c-button--PaddingTop, var(--pf-global--spacer--xs, 0.25rem));
  --pf-c-button--PaddingRight: var(--pf-c-label__c-button--PaddingRight, var(--pf-global--spacer--sm, 0.5rem));
  --pf-c-button--PaddingBottom: var(--pf-c-label__c-button--PaddingBottom, var(--pf-global--spacer--xs, 0.25rem));
  --pf-c-button--PaddingLeft: var(--pf-c-label__c-button--PaddingLeft, var(--pf-global--spacer--sm, 0.5rem));
  margin: var(--pf-c-label__c-button--MarginTop, -0.5rem)
          var(--pf-c-label__c-button--MarginRight, -0.5rem)
          var(--pf-c-label__c-button--MarginBottom, -0.5rem)
          var(--pf-c-label__c-button--MarginLeft, 0.25rem);
}

.compact {
  --pf-c-label--PaddingTop: var(--pf-c-label--m-compact--PaddingTop, 0);
  --pf-c-label--PaddingRight: var(--pf-c-label--m-compact--PaddingRight, var(--pf-global--spacer--sm, 0.5rem));
  --pf-c-label--PaddingBottom: var(--pf-c-label--m-compact--PaddingBottom, 0);
  --pf-c-label--PaddingLeft: var(--pf-c-label--m-compact--PaddingLeft, var(--pf-global--spacer--sm, 0.5rem));
  --pf-global--icon--FontSize--sm: 12px;
}

.add-label-btn {
  background-color: #fff;
  color: #0066cc;
  border: 1px solid #d2d2d2;
  border-radius: 9999px;
  padding: 0px 2px;
  font-size: 9px;
  cursor: pointer;
  font-weight: 500;
}

.add-label-btn:hover {
  background-color: #f5f5f5;
}

#outer {
  display: flex;
  flex-wrap: wrap;
  gap: 0.25rem;
  padding: 0.5rem;
  border: 1px solid #d2d2d2;
  border-radius: 6px;
  background-color: #fff;

  align-items: center;
}


:host([orientation="horizontal"]) #outer {
  flex-direction: row;
}

:host([orientation="vertical"]) #outer {
  flex-direction: column;
  align-items: flex-start;
}

::slotted([slot="category"]) {
  display: inline-block;
  max-width: 16ch; 
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  vertical-align: middle;
  cursor: default;
}

::slotted([slot="category"][title]):hover {
}

